--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-kneed==0.8.5
 pandas==2.0.3
 plotly==5.15.0
-scikit-learn==1.3.0
 streamlit==1.24.0
 ydata-profiling==4.6.1
+mysql-connector-python ==8.2.0
